--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ body {
     <a href="https://truck-store-copy-06c5df8a.base44.app/Home" class="option-card">
       <div class="option-card-inner flex flex-col items-center justify-center">
         <i class="fas fa-user-tie text-8xl text-white mb-6 transition-transform duration-500 hover:scale-110"></i>
-        <h2 class="text-4xl font-bold text-white mb-3">camprar</h2>
+        <h2 class="text-4xl font-bold text-white mb-3">comprar</h2>
         <p class="text-white/70 text-center max-w-xs">Gerencie clientes, pedidos, caminhões, relatórios e pagamentos de forma completa.</p>
         <span class="mt-6 button-glow inline-block cursor-pointer">Entrar</span>
       </div>
@@ -157,3 +157,4 @@ for(let i=0;i<50;i++){
 
 </body>
 </html>
+
