--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ body {
     </a>
 
     <!-- Administrador -->
-    <a href="https://nex-drone-log-copy-a798baef.base44.app" class="option-card">
+    <a href="login_funcionario.html" class="option-card">
       <div class="option-card-inner flex flex-col items-center justify-center">
         <i class="fas fa-shield-alt text-8xl text-white mb-6 transition-transform duration-500 hover:scale-110"></i>
         <h2 class="text-4xl font-bold text-white mb-3">Administrador</h2>
@@ -157,4 +157,5 @@ for(let i=0;i<50;i++){
 
 </body>
 </html>
+
 
